# tailwind-cli

./: Cargo.toml  readme.md  tailwind.config.js
src/: lib.rs
